# concert-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
agents/concierge/: README.md  agent.py  requirements.txt
agents/digest/: README.md  agent.py  requirements.txt
scripts/: run_local.py  seed_test_user.py
shared/: config.py  graph.py  models.py  prompts.py  scoring.py
shared/db/: client.py  repository.py
shared/db/migrations/: 001_schema.sql  002_rls.sql  003_event_cache.sql  004_event_cache_genres.sql
shared/services/: email_sender.py  event_cache.py  intent_parser.py  rate_limiter.py
shared/tools/: eventbrite.py  songkick.py  spotify.py  ticketmaster.py
tests/: conftest.py  test_chat_protocol.py  test_graph.py  test_intent_parser.py  test_tools.py
